--- a/src/src/components/signup/signup.module.scss
+++ b/src/src/components/signup/signup.module.scss
@@ -2,7 +2,8 @@
     background-color: rgba(211,211,211, 0.3);
     margin: 15px;
     padding: 35px 80px;
-    z-index: 4;
+    z-index: 0;
+    position: relative;
     box-shadow: 3px 3px 8px hsl(0, 0%, 80%);
 }
 
